--- a/Flips/Assembly-CSharp-vs.csproj
+++ b/Flips/Assembly-CSharp-vs.csproj
@@ -44,9 +44,9 @@
 	</Reference>
   </ItemGroup>
   <ItemGroup>
-     <Compile Include="Assets\Material\WalrusMaterial\GameScript.cs" />
      <Compile Include="Assets\Script\CardScript.cs" />
      <Compile Include="Assets\Script\ControlScript.cs" />
+     <Compile Include="Assets\Script\GameScript.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
